templates/02-security-group/sg.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Security Groups (ALB, ECS, Broker) with parameterized naming'

Parameters:
  ProjectName:
    Type: String
    Description: "Project name for tagging resources"
  VpcId:
    Type: String
    Description: "VPC ID where the security groups will be created"

Resources:
  AlbSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for Application Load Balancer"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-alb-sg"

  EcsSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for ECS Fargate Service"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref AlbSG
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-ecs-sg"

  BrokerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for AmazonMQ RabbitMQ Broker"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        # From ECS Service to Broker
        - IpProtocol: tcp
          FromPort: 5671 # AMQPS
          ToPort: 5671
          SourceSecurityGroupId: !Ref EcsSG
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-broker-sg"

Outputs:
  AlbSecurityGroupId:
    Description: "ALB Security Group ID"
    Value: !Ref AlbSG
    Export:
      Name: !Sub "${AWS::StackName}-AlbSgId"
  EcsSecurityGroupId:
    Description: "ECS Security Group ID"
    Value: !Ref EcsSG
    Export:
      Name: !Sub "${AWS::StackName}-EcsSgId"
  BrokerSecurityGroupId:
    Description: "Broker Security Group ID"
    Value: !Ref BrokerSG
    Export:
      Name: !Sub "${AWS::StackName}-BrokerSgId"
